--- a/src/NuGet.Clients/NuGet.VisualStudio.Client/NuGet.VisualStudio.Client.csproj
+++ b/src/NuGet.Clients/NuGet.VisualStudio.Client/NuGet.VisualStudio.Client.csproj
@@ -7,8 +7,8 @@
   <ItemDefinitionGroup>
     <ProjectReference>
       <Ngen>True</Ngen>
-      <NgenArchitecture>All</NgenArchitecture>
-      <NgenPriority>3</NgenPriority>
+      <NgenArchitecture>x86</NgenArchitecture>
+      <NgenPriority>2</NgenPriority>
     </ProjectReference>
   </ItemDefinitionGroup>
   <PropertyGroup>
